# blemb-proto

./: .gitignore  CMakeLists.txt  README.md
examples/: receiver.c  sender.c
include/blemb/: buffer.h  protoh.h  protow.h  types.h
internal/: blemb_binary.h  blemb_buffer.h  blemb_crc8.h
src/: binary.c  buffer.c  crc8.c  protoh.c  protow.c
